--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,3 @@
 tasks:
   - init: yarn
-    command: yarn --cwd ~/workspace/nlw-2-proffy/leo/web start
+    command: yarn --cwd /workspace/nlw-2-proffy/leo/web start
