--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,4 @@
 tasks:
   - init: yarn
+    command: yarn --cwd /workspace/nlw-2-proffy/leo/web
     command: yarn --cwd /workspace/nlw-2-proffy/leo/web start
