--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 tasks:
   - init: yarn --cwd /workspace/nlw-2-proffy/leo/web
-  - init: yarn --cwd /workspace/nlw-2-proffy/leo/server
-    command: yarn --cwd /workspace/nlw-2-proffy/leo/server start
+    command: yarn --cwd /workspace/nlw-2-proffy/leo/server
     command: yarn --cwd /workspace/nlw-2-proffy/leo/web start
+    command: yarn --cwd /workspace/nlw-2-proffy/leo/server start
     
