fix gitpod file

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,8 @@
 tasks:
   - init: yarn --cwd /workspace/nlw-2-proffy/leo/web
     command: yarn --cwd /workspace/nlw-2-proffy/leo/web start
+  - openMode: split-right
+  - openIn: left
+    command: yarn --cwd /workspace/nlw-2-proffy/leo/server
+    command: yarn --cwd /workspace/nlw-2-proffy/leo/server start
     
