--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,5 @@
 tasks:
   - init: yarn --cwd /workspace/nlw-2-proffy/leo/web
     command: yarn --cwd /workspace/nlw-2-proffy/leo/web start
+  - openMode: split-right
+    command: echo SplitTerminal
